--- a/src/components/WebexMeetingGuestAuthentication/WebexMeetingGuestAuthentication.scss
+++ b/src/components/WebexMeetingGuestAuthentication/WebexMeetingGuestAuthentication.scss
@@ -3,7 +3,7 @@ $C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-meeting-guest-authentication;
 .#{$C} {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 0.875rem;
   color: var(--wxc-text-color);
